--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p id="timerText"></p>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbx_NVAlr18QxC6CA-FWqbYYH2mDDlDC5rwS-8Z2C5kXcHF9Mxy-IfjAtP1gByIr0XwUjw/exec";
+const API_URL = "YOUR_WEBAPP_URL_HERE"; // replace with your new webapp URL
 
 const userEmail = document.getElementById("userEmail");
 const password = document.getElementById("password");
