--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p id="timerText"></p>
 
 <script>
-const API_URL = "YOUR_WEBAPP_URL_HERE"; // replace with your new webapp URL
+const API_URL = "https://script.google.com/macros/s/AKfycbw6Z8vWv5PlqbXPnoBjQv2-cyAP9qAIRqkm-7s97daUlnRgOZAPf4cao1LtOLm2QltL1A/exec"; // replace with your new webapp URL
 
 const userEmail = document.getElementById("userEmail");
 const password = document.getElementById("password");
