--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ button:disabled { background:#999; cursor:not-allowed; }
 <p id="timerText"></p>
 
 <script>
-const API_URL = "YOUR_WEBAPP_URL_HERE"; // Replace with your deployed Apps Script URL
+const API_URL = "https://script.google.com/macros/s/AKfycbxncaDPEwebK2ubybrpO8F83oulif6zNuScmAR5oR4npYQtNvOL6xfTgn92flVXniE_Dg/exec"; // Replace with your deployed Apps Script URL
 
 const userEmail = document.getElementById("userEmail");
 const password = document.getElementById("password");
