--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ button:disabled { background:#999; cursor:not-allowed; }
 </head>
 <body>
 
-<h2>User Registration 4</h2>
+<h2>User Registration 100</h2>
 
 <input type="email" id="userEmail" placeholder="Enter email" required>
 <input type="password" id="password" placeholder="Password" required>
@@ -37,7 +37,7 @@ button:disabled { background:#999; cursor:not-allowed; }
 <p id="timerText"></p>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbxncaDPEwebK2ubybrpO8F83oulif6zNuScmAR5oR4npYQtNvOL6xfTgn92flVXniE_Dg/exec"; // Replace with your deployed Apps Script URL
+const API_URL = "https://script.google.com/macros/s/AKfycbwXMSQpizs6aO0R0-zejRKUd-v-g7VXa0nUvN1kup4rK7EwWQqYjnecYYz_udNLdb7-qA/exec"; // Replace with deployed Apps Script URL
 
 const userEmail = document.getElementById("userEmail");
 const password = document.getElementById("password");
@@ -104,7 +104,6 @@ getCodeBtn.addEventListener("click", async ()=>{
   const formData = new URLSearchParams();
   formData.append("action","getCode");
   formData.append("userEmail",userEmail.value);
-  formData.append("password",password.value);
 
   try{
     const res = await fetch(API_URL,{method:"POST",body:formData});
