--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@ button:disabled { background:#999; cursor:not-allowed; }
 </div>
 
 <script>
-const API_URL="YOUR_WEBAPP_URL_HERE"; // Replace with your Apps Script URL
+const API_URL="https://script.google.com/macros/s/AKfycbxbFcrD9LzB6R6LlbQiucSYVa7FN2y47vbWXGU8vPl2btCvzR_RmhyyvN62pl6ZjmGeMw/exec"; // Replace with your Apps Script URL
 
 // --- Session check ---
 if(sessionStorage.getItem("loggedIn") === "true"){
