--- a/register.html
+++ b/register.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <base target="_top">
-  <script>
-    function register() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+<meta charset="UTF-8">
+<title>Register</title>
+<script>
+const WEB_APP_URL = "YOUR_DEPLOYED_WEBAPP_URL";
 
-      google.script.run.withSuccessHandler(function(res) {
-        document.getElementById("message").innerText = res.message;
-        if (res.success) {
-          document.getElementById("email").value = "";
-          document.getElementById("password").value = "";
-        }
-      }).registerUser(email, password);
-    }
-  </script>
+async function registerUser(e) {
+  e.preventDefault();
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+  const confirm = document.getElementById("confirm").value;
+
+  if(password !== confirm){
+    alert("Passwords do not match!");
+    return;
+  }
+
+  const formData = new URLSearchParams({
+    action: "register",
+    email: email,
+    password: password
+  });
+
+  const response = await fetch(WEB_APP_URL, {
+    method: "POST",
+    body: formData
+  });
+
+  const result = await response.json();
+  alert(result.message);
+  if(result.success){
+    document.getElementById("regForm").reset();
+  }
+}
+</script>
 </head>
 <body>
-  <h2>User Registration</h2>
-  <input type="email" id="email" placeholder="Email"><br><br>
-  <input type="password" id="password" placeholder="Password"><br><br>
-  <button onclick="register()">Register</button>
-  <p id="message"></p>
-  <p><a href="?page=login">Go to Login</a></p>
+<h2>Register</h2>
+<form id="regForm" onsubmit="registerUser(event)">
+  <label>Email: <input type="email" id="email" required></label><br>
+  <label>Password: <input type="password" id="password" required></label><br>
+  <label>Confirm Password: <input type="password" id="confirm" required></label><br>
+  <button type="submit">Register</button>
+</form>
 </body>
 </html>
