--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Login</title>
 <script>
-const WEB_APP_URL = "YOUR_DEPLOYED_WEBAPP_URL";
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyKYNAt8jPNtCZaWJCXnBcnxHCqk_HXfBKk5k_zavMUXIjjFJPN9SKesFZ8UleTl11y/exec";
 
 async function loginUser(e){
   e.preventDefault();
