--- a/register.html
+++ b/register.html
@@ -1,48 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Register</title>
-<script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyKYNAt8jPNtCZaWJCXnBcnxHCqk_HXfBKk5k_zavMUXIjjFJPN9SKesFZ8UleTl11y/exec";
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Register</title>
 
-async function registerUser(e) {
-  e.preventDefault();
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-  const confirm = document.getElementById("confirm").value;
+  <!-- Tailwind CSS via CDN (ideal for prototyping) -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-  if(password !== confirm){
-    alert("Passwords do not match!");
-    return;
-  }
+  <script>
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyKYNAt8jPNtCZaWJCXnBcnxHCqk_HXfBKk5k_zavMUXIjjFJPN9SKesFZ8UleTl11y/exec";
 
-  const formData = new URLSearchParams({
-    action: "register",
-    email: email,
-    password: password
-  });
+    async function registerUser(e) {
+      e.preventDefault();
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const confirm = document.getElementById("confirm").value;
 
-  const response = await fetch(WEB_APP_URL, {
-    method: "POST",
-    body: formData
-  });
+      if (password !== confirm) {
+        alert("Passwords do not match!");
+        return;
+      }
 
-  const result = await response.json();
-  alert(result.message);
-  if(result.success){
-    document.getElementById("regForm").reset();
-  }
-}
-</script>
+      const formData = new URLSearchParams({
+        action: "register",
+        email: email,
+        password: password
+      });
+
+      const response = await fetch(WEB_APP_URL, {
+        method: "POST",
+        body: formData
+      });
+
+      const result = await response.json();
+      alert(result.message);
+
+      if (result.success) {
+        document.getElementById("regForm").reset();
+      }
+    }
+  </script>
 </head>
-<body>
-<h2>Register</h2>
-<form id="regForm" onsubmit="registerUser(event)">
-  <label>Email: <input type="email" id="email" required></label><br>
-  <label>Password: <input type="password" id="password" required></label><br>
-  <label>Confirm Password: <input type="password" id="confirm" required></label><br>
-  <button type="submit">Register</button>
-</form>
+<body class="bg-gray-50 font-sans text-gray-900 min-h-screen flex items-center justify-center p-4">
+  <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-6">
+    <h2 class="text-2xl font-bold text-center text-indigo-700 mb-6">Create Account</h2>
+    
+    <form id="regForm" onsubmit="registerUser(event)" class="space-y-5">
+      <!-- Email -->
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+        <input 
+          type="email" 
+          id="email" 
+          required 
+          class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
+          placeholder="you@example.com"
+        />
+      </div>
+
+      <!-- Password -->
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+        <input 
+          type="password" 
+          id="password" 
+          required 
+          class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
+          placeholder="••••••••"
+        />
+      </div>
+
+      <!-- Confirm Password -->
+      <div>
+        <label for="confirm" class="block text-sm font-medium text-gray-700 mb-1">Confirm Password</label>
+        <input 
+          type="password" 
+          id="confirm" 
+          required 
+          class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
+          placeholder="••••••••"
+        />
+      </div>
+
+      <!-- Submit Button -->
+      <button 
+        type="submit" 
+        class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition"
+      >
+        Register
+      </button>
+    </form>
+
+    <p class="text-center text-sm text-gray-500 mt-4">
+      Already have an account? 
+      <a href="login.html" class="text-indigo-600 hover:underline font-medium">Login here</a>
+    </p>
+  </div>
 </body>
 </html>
