--- a/index.html
+++ b/index.html
@@ -1,84 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login</title>
+<meta charset="UTF-8">
+<title>Login</title>
+<script>
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyKYNAt8jPNtCZaWJCXnBcnxHCqk_HXfBKk5k_zavMUXIjjFJPN9SKesFZ8UleTl11y/exec";
 
-  <!-- Tailwind CSS via CDN (for prototyping only) -->
-  <script src="https://cdn.tailwindcss.com"></script>
+async function loginUser(e){
+  e.preventDefault();
+  const email = document.getElementById("loginEmail").value.trim();
+  const password = document.getElementById("loginPassword").value;
+  const messageDiv = document.getElementById("loginMessage");
+  messageDiv.textContent = "";
+  messageDiv.className = "";
 
-  <script>
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyKYNAt8jPNtCZaWJCXnBcnxHCqk_HXfBKk5k_zavMUXIjjFJPN9SKesFZ8UleTl11y/exec";
+  const formData = new URLSearchParams({
+    action: "login",
+    email: email,
+    password: password
+  });
 
-    async function loginUser(e) {
-      e.preventDefault();
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
+  try {
+    const response = await fetch(WEB_APP_URL, {
+      method: "POST",
+      body: formData
+    });
 
-      const formData = new URLSearchParams({
-        action: "login",
-        email: email,
-        password: password
-      });
+    const result = await response.json();
 
-      const response = await fetch(WEB_APP_URL, {
-        method: "POST",
-        body: formData
-      });
-
-      const result = await response.json();
-
-      if (result.success) {
-        document.getElementById("loginModal").classList.add("hidden");
-        document.getElementById("mainContent").classList.remove("hidden");
-      } else {
-        alert(result.message);
-      }
+    if(result.success){
+      document.getElementById("loginModal").style.display = "none";
+      document.getElementById("mainContent").style.display = "block";
+    } else {
+      messageDiv.textContent = result.message;
+      messageDiv.className = "text-red-500 mt-2 text-center";
     }
-  </script>
+  } catch(err){
+    messageDiv.textContent = "⚠️ Login failed. Try again later.";
+    messageDiv.className = "text-red-500 mt-2 text-center";
+    console.error(err);
+  }
+}
+</script>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+#mainContent { display:none; }
+#loginModal { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.4); display:flex; align-items:center; justify-content:center; }
+</style>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-gray-50">
 
-  <!-- Login Modal -->
-  <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50">
-    <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-6">
-      <h3 class="text-xl font-semibold text-gray-800 mb-4">Login</h3>
-      <form onsubmit="loginUser(event)" class="space-y-4">
-        <div>
-          <label for="loginEmail" class="block text-sm font-medium text-gray-700">Email</label>
-          <input 
-            type="email" 
-            id="loginEmail" 
-            required 
-            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-          />
-        </div>
-        <div>
-          <label for="loginPassword" class="block text-sm font-medium text-gray-700">Password</label>
-          <input 
-            type="password" 
-            id="loginPassword" 
-            required 
-            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-          />
-        </div>
-        <button 
-          type="submit" 
-          class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-        >
-          Login
-        </button>
-      </form>
-    </div>
+<div id="loginModal">
+  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
+    <h3 class="text-xl font-semibold mb-4 text-center">Login</h3>
+    <form onsubmit="loginUser(event)" class="space-y-4">
+      <div>
+        <label class="block font-medium">Email</label>
+        <input type="email" id="loginEmail" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+      </div>
+      <div>
+        <label class="block font-medium">Password</label>
+        <input type="password" id="loginPassword" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+      </div>
+      <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition">Login</button>
+    </form>
+    <div id="loginMessage" class="mt-2 text-sm"></div>
+    <p class="text-sm text-gray-500 mt-4 text-center">
+      Forgot your password? Contact the administrator:<br/>
+      Email: <a href="mailto:youradmin@email.com" class="text-blue-500">youradmin@email.com</a> | 
+      WhatsApp/Telegram: <a href="https://wa.me/9607412365" target="_blank" class="text-blue-500">+9607412365</a>
+    </p>
   </div>
+</div>
 
-  <!-- Main Content (Hidden by default) -->
-  <div id="mainContent" class="hidden p-6 text-center">
-    <h2 class="text-2xl font-bold text-gray-800">Protected Content</h2>
-    <p class="text-gray-600 mt-2">Only visible after successful login.</p>
-    <!-- Add your forms or content here -->
-  </div>
+<div id="mainContent" class="p-6">
+  <h2 class="text-2xl font-semibold mb-4">Protected Content</h2>
+  <p>Only visible after successful login.</p>
+  <!-- Add your secured forms or data retrieval features here -->
+</div>
 
 </body>
 </html>
