--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Login</title>
+<title>Login with Auto-Logout</title>
+<script src="https://cdn.tailwindcss.com"></script>
 <script>
 const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyKYNAt8jPNtCZaWJCXnBcnxHCqk_HXfBKk5k_zavMUXIjjFJPN9SKesFZ8UleTl11y/exec";
 
+// ===== Login Function =====
 async function loginUser(e){
   e.preventDefault();
   const email = document.getElementById("loginEmail").value.trim();
   const password = document.getElementById("loginPassword").value;
   const messageDiv = document.getElementById("loginMessage");
   messageDiv.textContent = "";
-  messageDiv.className = "";
 
   const formData = new URLSearchParams({
     action: "login",
@@ -21,16 +22,13 @@ async function loginUser(e){
   });
 
   try {
-    const response = await fetch(WEB_APP_URL, {
-      method: "POST",
-      body: formData
-    });
-
+    const response = await fetch(WEB_APP_URL, { method: "POST", body: formData });
     const result = await response.json();
 
     if(result.success){
-      document.getElementById("loginModal").style.display = "none";
-      document.getElementById("mainContent").style.display = "block";
+      localStorage.setItem("loggedIn", "true");
+      localStorage.setItem("lastActivity", Date.now());
+      showMainContent();
     } else {
       messageDiv.textContent = result.message;
       messageDiv.className = "text-red-500 mt-2 text-center";
@@ -41,16 +39,47 @@ async function loginUser(e){
     console.error(err);
   }
 }
+
+// ===== Show Main Content =====
+function showMainContent(){
+  document.getElementById("loginModal").style.display = "none";
+  document.getElementById("mainContent").style.display = "block";
+}
+
+// ===== Logout Function =====
+function logoutUser(){
+  localStorage.removeItem("loggedIn");
+  localStorage.removeItem("lastActivity");
+  location.reload();
+}
+
+// ===== Activity Timer =====
+function resetTimer(){
+  localStorage.setItem("lastActivity", Date.now());
+}
+document.addEventListener("mousemove", resetTimer);
+document.addEventListener("keydown", resetTimer);
+document.addEventListener("click", resetTimer);
+
+setInterval(()=>{
+  const last = localStorage.getItem("lastActivity");
+  if(last && Date.now() - last > 10*60*1000){ // 10 min
+    logoutUser();
+  }
+}, 10000); // check every 10 sec
+
+// ===== On Page Load =====
+window.addEventListener("DOMContentLoaded", ()=>{
+  if(localStorage.getItem("loggedIn") === "true"){
+    showMainContent();
+  }
+});
 </script>
-<script src="https://cdn.tailwindcss.com"></script>
-<style>
-#mainContent { display:none; }
-#loginModal { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.4); display:flex; align-items:center; justify-content:center; }
-</style>
 </head>
 <body class="bg-gray-50">
 
-<div id="loginModal">
+<!-- Login Modal -->
+<div id="loginModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center">
   <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
     <h3 class="text-xl font-semibold mb-4 text-center">Login</h3>
     <form onsubmit="loginUser(event)" class="space-y-4">
@@ -64,7 +93,7 @@ async function loginUser(e){
       </div>
       <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition">Login</button>
     </form>
-    <div id="loginMessage" class="mt-2 text-sm"></div>
+    <div id="loginMessage" class="mt-2 text-sm text-center"></div>
     <p class="text-sm text-gray-500 mt-4 text-center">
       Forgot your password? Contact the administrator:<br/>
       Email: <a href="mailto:youradmin@email.com" class="text-blue-500">youradmin@email.com</a> | 
@@ -73,9 +102,15 @@ async function loginUser(e){
   </div>
 </div>
 
+<!-- Main Content -->
 <div id="mainContent" class="p-6">
-  <h2 class="text-2xl font-semibold mb-4">Protected Content</h2>
-  <p>Only visible after successful login.</p>
+  <!-- Header with Logout -->
+  <header class="flex justify-between items-center mb-4 bg-white shadow p-4 rounded">
+    <h2 class="text-xl font-semibold">Protected Content</h2>
+    <button onclick="logoutUser()" class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 transition">Logout</button>
+  </header>
+
+  <p>Welcome! Only logged-in users can see this content.</p>
   <!-- Add your secured forms or data retrieval features here -->
 </div>
 
