--- a/page1.html
+++ b/page1.html
@@ -6,18 +6,33 @@
 <title>Page 1</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="auth.js"></script>
-</head>
-<body onload="checkSession()">
+<script>
+function loadHeaderFooter() {
+  // Load dynamic header
+  fetch('header.html')
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById('header-container').innerHTML = html;
+      document.getElementById('header-title').innerText = "Page 1";
+    });
 
-<div id="header-placeholder" class="bg-blue-500 text-white p-4 flex justify-between items-center">
-  <h1 class="text-lg font-semibold">Page 1</h1>
-  <button onclick="logoutUser()" class="bg-red-500 px-3 py-1 rounded hover:bg-red-600">Logout</button>
-</div>
+  // Load dynamic footer
+  fetch('footer.html')
+    .then(res => res.text())
+    .then(html => document.getElementById('footer-container').innerHTML = html);
+}
+</script>
+</head>
+<body onload="checkSession(); loadHeaderFooter()">
+
+<div id="header-container"></div>
 
 <main class="max-w-3xl mx-auto p-6">
-  <h2 class="text-xl font-semibold mb-4">Content for Page 1</h2>
-  <p>This page is protected and visible only after login.</p>
+  <h2 class="text-xl font-semibold mb-4">Page 1 Content</h2>
+  <p>This page is visible only after login.</p>
 </main>
+
+<div id="footer-container"></div>
 
 </body>
 </html>
