--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
 <script>
-const WEB_APP_URL = "YOUR_WEB_APP_URL";
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwk3eL74-PFX7acEUU3ddiPnGrHW8zBgVRNG4mQPT1v_CbV1ctc2dPxewEGIQqLnwBncA/exec";
 
 document.getElementById("loginForm").addEventListener("submit", async e => {
   e.preventDefault();
